istio-client/src/test/resources/aggregate.yaml
---
apiVersion: "config.istio.io/v1alpha2"
kind: metric
metadata:
  name: recommendationrequestcount
  namespace: istio-system
spec:
  value: "1"
  dimensions:
    source: source.service | "unknown"
    destination: destination.service | "unknown"
    version: destination.labels["version"] | "unknown"
    user_agent: request.headers["user-agent"] | "unknown"
  monitoredResourceType: '"UNSPECIFIED"'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-route
spec:
  hosts:
  - reviews.prod.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: "/wpcatalog"
    - uri:
        prefix: "/consumercatalog"
    rewrite:
      uri: "/newcatalog"
    route:
    - destination:
        host: reviews.prod.svc.cluster.local
        subset: v2
  - route:
    - destination:
        host: reviews.prod.svc.cluster.local
        subset: v1
