istio-client/src/test/resources/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: spring-boot-istio-routing-service
spec:
  host: spring-boot-istio-routing-service
  trafficPolicy:
    tls:
      mode: DISABLE
  subsets:
    - name: a
      labels:
        version: a
    - name: b
      labels:
        version: b
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
