istio-client/src/test/resources/egress-rule.yaml
apiVersion: config.istio.io/v1alpha2
kind: EgressRule
metadata:
  name: foo-egress-rule
spec:
  destination:
    service: www.foo.com
  ports:
    - port: 80
      protocol: http
    - port: 443
      protocol: https
