istio-client/src/test/resources/metric.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: metric
metadata:
  name: recommendationrequestcount
  namespace: istio-system
spec:
  value: "1"
  dimensions:
    source: source.service | "unknown"
    destination: destination.service | "unknown"
    version: destination.labels["version"] | "unknown"
    user_agent: request.headers["user-agent"] | "unknown"
  monitored_resource_type: '"UNSPECIFIED"'
