istio-client/src/test/resources/policy.yaml
apiVersion: authentication.istio.io/v1alpha1
kind: Policy
metadata:
  name: spring-boot-istio-routing-service
spec:
  targets:
    - name: spring-boot-istio-routing-service
