istio-client/src/test/resources/rule.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: Rule
metadata:
  name: denynameserviceaccess
spec:
  match: destination.labels["app"] == "spring-boot-istio-security-name" && source.labels["app"] == "spring-boot-istio-security-greeting"
  actions:
  - handler: denynameservicehandler.denier
    instances: [ denynameservicerequest.checknothing ]
